# ftcli

./: .gitignore  README.md  auth.py  database.py  db.py  ftcli.py  ftcli.spec  pyproject.toml  requirements.txt  setup.py  tui.py
commands/: approve.py  auth.py  create.py  init.py  join.py  join_team.py  pending.py  stats.py
ftcli/: __init__.py  auth.py  database.py  ftcli.py  tui.py
ftcli/commands/: approve.py  auth.py  create.py  init.py  join.py  pending.py  stats.py
ftcli/utils/: config.py  wipe_db.py
utils/: config.py  ftcScout.py  ftc_scout.py  wipeDB.py  wipe_db.py
