[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftcli-terminal-tool"
version = "0.1.1"
authors = [
    {name = "Kashyap Sukshavasi", email = "ksukshavasi@gmail.com"},
]
description = "FTC team management CLI tool with TUI interface"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "asyncpg>=0.27.0",
    "textual>=0.47.0",
    "python-dotenv>=0.19.0",
    "typer>=0.9.0",
    "aiohttp>=3.8.0",
    "bcrypt>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/kashsuks/ftcli"
"Bug Reports" = "https://github.com/kashsuks/ftcli/issues"
"Source" = "https://github.com/kashsuks/ftcli"

[project.scripts]
ftcli = "ftcli.ftcli:main"